# cli

./: CMakeLists.txt  README.md
include/: cli.hpp
include/configuration/: configuration.hpp  exception_source_information.hpp
include/core/: core.hpp  dictionary.hpp  option.hpp  option_book.hpp  option_map.hpp  parser.hpp
include/error/: accessing_option_not_yet_added.hpp  accessing_option_without_arguments.hpp  error.hpp  invalid_format_for_long_option_name.hpp  invalid_format_for_short_option_name.hpp  long_option_empty.hpp  long_option_starts_with_hyphen.hpp  long_option_with_one_hyphen.hpp  option_already_added_as.hpp  option_expects_argument.hpp  option_is_required_but_not_added.hpp  option_must_have_at_least_short_or_long_name.hpp  short_option_empty.hpp  unrecognized_option.hpp
include/generic/: exception.hpp
src/core/: option.cpp  option_map.cpp  parser.cpp
test/: CMakeLists.txt
test/configuration/: CMakeLists.txt  exception_source_information.cpp
test/core/: CMakeLists.txt  dictionary.cpp  option.cpp  option_book.cpp  option_map.cpp  parser.cpp
test/error/: CMakeLists.txt  accessing_option_not_yet_added.cpp  accessing_option_without_arguments.cpp  invalid_format_for_long_option_name.cpp  invalid_format_for_short_option_name.cpp  option_already_added_as.cpp  option_expects_argument.cpp  option_is_required_but_not_added.cpp  option_must_have_at_least_short_or_long_name.cpp  unrecognized_option.cpp
test/generic/: CMakeLists.txt  exception.cpp
